# creativity_benchmarks

./: README.md  pyproject.toml
src/llm_benchmarks/: __init__.py  cli.py
src/llm_benchmarks/benchmarks/: __init__.py  base.py  runner.py
src/llm_benchmarks/benchmarks/creative_constraints/: __init__.py  quilting.py
src/llm_benchmarks/benchmarks/difference_and_negation/: __init__.py  not_like_that.py
src/llm_benchmarks/benchmarks/iteration/: __init__.py  free_association.py
src/llm_benchmarks/benchmarks/style_flexibility/: __init__.py  this_and_that.py
src/llm_benchmarks/clients/: __init__.py  anthropic_client.py  base.py  google_client.py  openai_client.py
src/llm_benchmarks/config/: __init__.py  settings.py
src/llm_benchmarks/utils/: __init__.py  metrics.py  text.py  visualizer.py
tests/: __init__.py  test_benchmarks.py  test_free_association.py  test_not_like_that.py  test_quilting.py  test_this_and_that.py  test_utils.py
